# CHIMERA-001-P-A

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig
components/spdlog/: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/command/: cxx_command.cpp  cxx_command.hpp
main/console/: cxx_console.cpp  cxx_console.hpp
main/exception/: cxx_chimera_exception.cpp  cxx_chimera_exception.hpp  cxx_exception.cpp  cxx_exception.hpp
main/ik/: IK.cpp  servo_drive.cpp
main/leg/: ik.cpp  leg_move_controller.cpp  leg_move_controller.hpp  servo_controller.cpp  servo_controller.hpp  servo_drive.cpp  servo_drive.hpp
main/leg_controller/: ik.cpp  ik.hpp  servo_controller.cpp  servo_controller.hpp  servo_drive.cpp  servo_drive.hpp
main/servo_controller/: ik.cpp  ik.hpp  servo_controller.cpp  servo_controller.hpp  servo_drive.cpp  servo_drive.hpp
main/storage/: cxx_nvs.cpp  cxx_nvs.hpp
